   now has full SGI RGB image format, including RLE and 16-bit/sample
   images.
   https://rt.cpan.org/Ticket/Display.html?id=8666

 - logging functions are now available in the API

 - applied Gabriel Vasseur's patch
   added documentation, further tests, and support for greyscale images
   Obviously problems are my fault :)
   https://rt.cpan.org/Ticket/Display.html?id=28142

Bug fixes:

 - in some cases it's possible for giflib/libungif to return color 
   indexes outside the range of colors defined by the image's palette.
   We now expand the palette to match the indexes used.
   Thanks to Gabriel Vasseur for reporting this.

 - fixed various memory leaks that could occur when failing to read png,
   jpeg, bmp or tga files.

 - to avoid confusion, channels not present in the image are returned as
   zero by getscanline().  This has no effect on the C level i_glin()
   and i_glinf() API functions which continue to not set the unused
   channels.

 - the convert() method now returns an image of the same sample size as
   the source image.
   https://rt.cpan.org/Ticket/Display.html?id=28492

 - remove repeated text in Imager::Files
   http://rt.cpan.org/Ticket/Display.html?id=27589

 - be even more explicit that scale() and friends don't modify the source
   image, but return a new image.
   http://rt.cpan.org/Ticket/Display.html?id=28570

 - improve the error message from errstr() when you try to load a font
   for which the driver hasn't been built in Imager.
   http://rt.cpan.org/Ticket/Display.html?id=27571

 - transparency is now enabled by default when writing GIF images
   http://rt.cpan.org/Ticket/Display.html?id=27615

 - Imager would not load on Windows 98
   http://rt.cpan.org/Ticket/Display.html?id=27653

Imager 0.59 - 14 June 2007
===========

Bug fixes:

 - fixes a regression introduced by the fixes for RT 11972
   http://rt.cpan.org/Ticket/Display.html?id=27546

 - cropping outside the image would return an Imager object with