@@ -13,19 +13,21 @@ MODULE = Imager::File::ICO  PACKAGE = Imager::File::ICO
 PROTOTYPES: DISABLE
 
 Imager::ImgRaw
-i_readico_single(ig, index)
+i_readico_single(ig, index, masked = 0)
 	Imager::IO ig
 	int index
+	bool masked
 
 void
-i_readico_multi(ig)
+i_readico_multi(ig, masked = 0)
 	Imager::IO ig
+	bool masked
       PREINIT:
         i_img **imgs;
         int count;
         int i;
       PPCODE:
-        imgs = i_readico_multi(ig, &count);
+        imgs = i_readico_multi(ig, &count, masked);
         if (imgs) {
           EXTEND(SP, count);
           for (i = 0; i < count; ++i) {
